--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: [World IA Day Organizer Guidebook | organizer-guide]
-description: [Guidebook created to help organizers of World IA Day events.]
-logo: [branding/WIAD19/WIAD19-Logos/wiad19logos_primary_color.png]
+title: World IA Day Organizer Guidebook | organizer-guide
+description: Guidebook created to help organizers of World IA Day events.
+logo: /branding/WIAD19/WIAD19-Logos/wiad19logos_primary_color.png
