--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-architect
 title: World IA Day Organizer Guidebook
 logo: /branding/WIAD19/WIAD19-Logos/wiad19logos_primary_color.png
